# cosmic-pie-menu

./: .gitignore  Cargo.toml  README.md  cosmic-pie-menu.desktop  justfile
docs/: DEVELOPMENT.md  README.md  THEMATIC_ANALYSIS.md
docs/transcripts/: .gitkeep  README.md  session-2026-01-22.md  session-2026-01-23.md  session-2026-01-24.md  session-2026-01-26.md
resources/: applet-settings.json  io.github.reality2_roycdavies.cosmic-pie-menu.desktop
src/: applet.rs  apps.rs  config.rs  gesture.rs  lib.rs  main.rs  pie_menu.rs  settings.rs  settings_cli.rs  settings_page.rs  tray.rs  windows.rs
