[package]
name = "cosmic-pie-menu"
version = "0.5.1"
edition = "2021"
authors = ["Roy C. Davies"]
license = "GPL-3.0"
description = "Pie menu launcher for COSMIC desktop - radial app tray"

[dependencies]
# COSMIC GUI toolkit with Wayland layer-shell support
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = [
    "a11y",
    "tokio",
    "winit",
    "wgpu",
    "wayland",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Config parsing (COSMIC uses RON format)
ron = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Desktop entry parsing
freedesktop-desktop-entry = "0.7"

# XDG base directories
xdg = "2.5"

# File paths
dirs = "6"

# Icon lookup
freedesktop-icons = "0.2"

# Image handling for icons
image = "0.24"

# System tray (StatusNotifierItem protocol)
ksni = { version = "0.3.3", features = ["blocking"] }

# Wayland protocols for detecting running apps
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }

# COSMIC-specific protocols for window activation
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols.git" }

# File system watching for config changes
notify = "6"

# Input device handling for gesture detection
evdev = { version = "0.12", features = ["tokio"] }
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
